Attempted fix for strange failure in CI
Signed-off-by: Michael Heinrichs <netopyr@users.noreply.github.com>